# camera-simulator

./: .dockerignore  .gitignore  README.md
.github/: copilot-instructions.md
.github/workflows/: sidecar-tests.yml
UnrealProject/: CameraSimulator.uproject
UnrealProject/Config/: DefaultEngine.ini
UnrealProject/Plugins/CamSimPlugin/: CamSimPlugin.uplugin
UnrealProject/Plugins/CamSimPlugin/Source/CamSimPlugin/: CamSimPlugin.Build.cs
UnrealProject/Plugins/CamSimPlugin/Source/CamSimPlugin/Private/: AircraftKinematicActor.cpp  CamSimPlugin.cpp  CommandReceiver.cpp  FrameExporter.cpp  GimbalComponent.cpp  SimCameraComponent.cpp  TelemetryExporter.cpp
UnrealProject/Plugins/CamSimPlugin/Source/CamSimPlugin/Public/: AircraftKinematicActor.h  CommandReceiver.h  FrameExporter.h  GimbalComponent.h  SharedMemoryTypes.h  SimCameraComponent.h  TelemetryExporter.h
docker/: Dockerfile.flightdir  Dockerfile.framegen  Dockerfile.sidecar  Dockerfile.ue5  docker-compose.mac.yml  docker-compose.yml
docs/: architecture.md  deployment.md  development.md  ipc-protocol.md  klv-reference.md
scripts/: run_desktop.sh  run_headless.sh
sidecar/: pyproject.toml  test_klv_encoder.py
sidecar/camsim_sidecar/: __init__.py  crc.py  klv_encoder.py  main.py  pipeline.py  shm_reader.py
tools/: flight_director.py  frame_gen.py  inject_commands.py  klv_decoder.py  recv_and_inspect.py
